argoevents/evenet-source-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-eventsource
spec:
  ports:
  - port: 12000
    protocol: TCP
    targetPort: 12000
  selector:
    eventsource-name: github
  type: ClusterIP
