argoevents/event-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: githubevent
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  namespace: argo-events
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: webhook-eventsource
           port:
             number: 12000
    host: events.sbx-000094.sause1.bakerhughes.com
